src/test/ui/consts/const-eval/ub-incorrect-vtable.64bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-incorrect-vtable.rs:19:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &[0usize, 1usize, 1000usize])) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid drop function pointer in vtable (not pointing to a function)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-incorrect-vtable.rs:23:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &[1usize, usize::MAX, 1usize])) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid drop function pointer in vtable (not pointing to a function)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-incorrect-vtable.rs:33:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), 1usize, 1000usize))) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered invalid vtable: alignment `1000` is not a power of 2

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-incorrect-vtable.rs:37:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), usize::MAX, 1usize))) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered invalid vtable: size is bigger than largest supported object

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
